# batch-play

./: .gitignore  Makefile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: pyproject.toml
app/batch_play/: main.py
app/tests/: tests.py
archive/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
batch-play/: README.md  pyproject.toml
container/: Dockerfile  requirements.txt
kubernetes/: batch-play-job.yaml
