[tool.poetry]
name = "batch-play"
version = "0.1.0"
description = ""
authors = ["Jim Conner <c_rennochj@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
openpyxl = "3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
