[tool.poetry]
name = "batch-play"
version = "0.1.0"
description = "A test app"
authors = ["Jim Conner <c_rennochj@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.1.3"
numpy = "1.26.1"
openpyxl = "3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
